# babm

./: .gitignore  .pre-commit-config.yaml  Babfile.yml  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/babm/: __main__.py  cli.py
tests/: test_cli.py
