[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babm"
version = "0.0.1"
description = "CLI Migration tool to convert between Babfile and other task runner formats"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bab.sh", email = "contact@bab.sh" }
]
keywords = [
    "cli",
    "migration",
    "task-runner",
    "babfile",
    "makefile",
    "justfile",
    "converter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
build = [
    "pyinstaller>=6.11.0",
]

[project.scripts]
babm = "babm.cli:app"

[project.urls]
Homepage = "https://github.com/bab-sh/babm"
Documentation = "https://github.com/bab-sh/babm#readme"
Repository = "https://github.com/bab-sh/babm.git"
Issues = "https://github.com/bab-sh/babm/issues"
Changelog = "https://github.com/bab-sh/babm/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/babm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TCH",
    "PTH",
    "ERA",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
]

[tool.ruff.lint.isort]
known-first-party = ["babm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/babm", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/babm"]
branch = true
parallel = true
omit = ["src/babm/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
